feat(profile): Implement update, delete, and photo upload for UserProfile
- Add PUT, DELETE, and POST `/photo` endpoints to `UserProfileController`.
- Implement `updateProfile`, `deleteProfile`, `uploadProfilePhoto` in `UserProfileService`.
- Refactor `FileStorageService`: Add generic upload, specific uploaders for resume/photo, and delete method.
- Update Repositories: Add `findAllByCandidate` (`JobApplicationRepository`).